# scorch

./: .cursorignore  .flake8  .gitignore  CLAUDE.md  CMakeLists.txt  Pipfile  README.md  benchmark_spmm_implementations.py  measure_autoscheduling_times.py  measure_pytorch_fusion_benefit.py  pre-commit.sh  pytest.ini  requirements.txt  setup.py  setup.sh
bench/: README_GCN.md  README_sparse_autoencoder.md  README_sparse_transformer.md  _run_sddmm_big.py  _utils.py  bench_gcn.py  bench_omp_vs_tbb.py  bench_scheduling.py  bench_sddmm.py  bench_sparse_autoencoder.py  bench_sparse_transformer.py  bench_spmm.py  bench_spmm_variants.py  bench_spmspm.py  bench_spmv.py  requirements-gcn.txt
csrc/: elem_wise_vector_mul.cpp  elem_wise_vector_mul.h  header.cpp  header.h  kernels.h  ops.cpp  prebuilt_types.h  pybind.cpp  spmm-csr-long.cpp  spmm-csr-ones.cpp  spmm-csr.cpp  spmm.h  spmv.h
output/: first_implementation.cpp  second_implementation.cpp  test_spmm_dd_ds_dd.cpp  test_spmm_dd_ds_dd_tiled_time.cpp
sample-kernels/: coo-to-csr.cpp  coo-to-dcsr.cpp  coo-to-dense.cpp  dense-to-coo.cpp  dense-to-dcsr.cpp  elemwise_mul_2d_dd_dd_ds.cpp  elemwise_mul_2d_ds_dd_ds.cpp  elemwise_mul_4d_ddss_dddd_ssss.cpp  ij_i_j-ss_s_s.cpp  spmm-dd_ds_ds.cpp  spmm-ds_ds_ds-scorch.cpp  spmm-ds_ds_ds.cpp  spmm-sd_ds_ds.cpp  spmm-v2.cpp  spmm.cpp  spmv.cpp
taco_torch/: __init__.py  cin.py  compiler.py  format.py  iter_graph.py  iter_lattice.py  iterator.py  llir.py  ops.py  storage.py  tensor.py  utils.py
tests/: conftest.py  test_add.py  test_cin.py  test_compiler.py  test_format.py  test_mlp.py  (+3 more)
(+234 files in other folders)
